[package]
name = "crypto-price-listener"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
dotenv = "0.15.0"
futures-util = "0.3.32"
rust_decimal = "1.41.0"
serde = "1.0.228"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio-native-tls", "macros"] }
tokio = { version = "1.50.0", features = ["full"] }
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-appender = "0.2.3"
